<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".muttrah">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="424dp"
        android:layout_height="34dp"
        android:background="@drawable/purple"
        android:text="@string/title2"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button123"
        android:layout_width="211dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/PREVIOUS"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="578dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button122"
        app:layout_constraintVertical_bias="0.247"
        tools:ignore="MissingConstraints,UnknownIdInLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place2"
                android:textAlignment="textStart"
                android:textSize="34sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="422dp"
                android:layout_height="287dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/muttrah" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="375dp"
                android:layout_height="497dp"
                android:text="@string/one"
                android:textAlignment="textStart"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/souq"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="355dp"
                android:contentDescription="@string/image_alalam"
                app:srcCompat="@drawable/souq" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textAlignment="textStart"
                android:textSize="24sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>