<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purpleee"
    android:backgroundTintMode="src_in"
    tools:context=".login">

    <Button
        android:id="@+id/button2"
        android:layout_width="376dp"
        android:layout_height="69dp"
        android:text="@string/Login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextuser"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:autofillHints="Username"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextpass"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:autofillHints="Password"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="376dp"
        android:layout_height="69dp"
        android:text="@string/Register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="213dp"
        android:layout_height="175dp"
        android:contentDescription="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/icone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>