<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purpleee"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="270dp"
        android:text="@string/welcome_message2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button11"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:text="@string/NEXT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.619"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="748dp"
        android:layout_height="340dp"
        android:contentDescription="@string/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cilp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="323dp"
        android:layout_height="188dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_surface"
        android:textSize="34sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>